# VideoTrimmer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yly/videotrimmer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/files/: cmdutils.h  native-lib.cpp
app/src/main/cpp/files/include/libavfilter/: avfilter.h
app/src/main/cpp/files/include/libavformat/: url.h
app/src/main/cpp/files/include/libavutil/: common.h  pixfmt.h
app/src/main/java/com/yly/videotrimmer/: MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yly/videotrimmer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
